added OAuth to allow access to premium shows database
