# routes/index.js
@@ -1,3 +1,5 @@
+const passport = require("passport");
+
 const router = require("express").Router();
 
 router.use('/', require('./swagger'));
@@ -8,5 +10,16 @@ router.get("/", (req, res) => {
 });
 
 router.use('/movies', require('./movies'));
+
+router.use('/shows', require('./shows'));
+
+router.get('/login', passport.authenticate('github'), (req, res) => {});
+
+router.get('/logout', function(req, res, next) {
+  req.logOut(function(err) {
+    if (err) { return next(err); }
+    res.redirect('/');
+  });
+});
 
 module.exports = router;
